[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pickables/PickableItem.gd" type="Script" id=1]
[ext_resource path="res://ui/Wood.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 13.7822

[sub_resource type="CircleShape2D" id=2]
radius = 65.0952

[node name="PickableItem" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )
icon = ExtResource( 2 )

[node name="graphic" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="reach" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="reach"]
shape = SubResource( 2 )
[connection signal="input_event" from="." to="." method="_on_PickableItem_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_PickableItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PickableItem_mouse_exited"]
